binrw/tests/ui/invalid_keyword_struct.stderr
error: expected one of: `big`, `little`, `map`, `try_map`, `magic`, `import`, `import_raw`, `assert`, `pre_assert`
 --> $DIR/invalid_keyword_struct.rs:5:6
  |
5 | #[br(invalid_struct_keyword)]
  |      ^^^^^^^^^^^^^^^^^^^^^^
